--- a/app/src/main/res/layout/child_grid_card.xml
+++ b/app/src/main/res/layout/child_grid_card.xml
@@ -16,15 +16,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/child_grid_img"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:padding="3dp"
+        <androidx.cardview.widget.CardView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:elevation="12dp"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/blank_profile_pic" />
+            android:id="@+id/view2"
+            app:cardCornerRadius="40dp"
+            android:layout_centerHorizontal="true">
+            <ImageView
+                android:layout_height="80dp"
+                android:layout_width="match_parent"
+                android:id="@+id/child_grid_img"
+                android:src="@drawable/blank_profile_pic"
+                android:scaleType="centerCrop"/>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/child_grid_name"
@@ -33,7 +39,9 @@
             android:text="Child Name"
             android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="20sp"
+            android:textSize="15dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="@+id/child_grid_img" />
 
     </LinearLayout>
@@ -48,11 +56,11 @@
         android:layout_marginTop="70dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:textColor="@android:color/black"
+        android:textColor="#ffffff"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/status_background"
+        android:background="@color/colorPrimary"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp" />
 
