--- a/app/src/main/res/layout/fragment_nap_activity.xml
+++ b/app/src/main/res/layout/fragment_nap_activity.xml
@@ -23,7 +23,7 @@
                 android:layout_height="50dp"
                 android:layout_margin="5dp"
                 android:scaleType="fitCenter"
-                app:srcCompat="@drawable/icon_nap_plain" />
+                android:background="@drawable/ic_napactivity" />
 
             <TextView
                 android:id="@+id/textView7"
@@ -61,7 +61,7 @@
                         android:layout_weight="1"
                         android:text="Tagged Kids :"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/colorPrimary" />
 
                     <TextView
                         android:id="@+id/Nap_taggedKids"
@@ -89,7 +89,7 @@
                         android:layout_weight="1"
                         android:text="From when? :"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/colorPrimary"  />
 
 
                     <LinearLayout
@@ -146,7 +146,7 @@
                         android:layout_weight="1"
                         android:text="To when? :     "
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/colorPrimary"  />
 
 
                     <LinearLayout
@@ -202,7 +202,7 @@
                         android:layout_weight="1"
                         android:text="Details :"
                         android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/colorPrimary"  />
 
                     <EditText
                         android:id="@+id/Nap_Details"
@@ -216,11 +216,12 @@
 
                 <Button
                     android:id="@+id/Nap_AddPost"
-                    android:theme="@style/Widget.AppCompat.Button"
-                    android:padding="15dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/ic_btnfilledblue"
+                    android:textColor="#ffffff"
+                    android:textSize="15dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_width="200dp"
+                    android:layout_height="45dp"
                     android:layout_gravity="center"
                     android:text="Add Event" />
             </LinearLayout>
