--- a/app/src/main/res/layout/fragment_child_profile.xml
+++ b/app/src/main/res/layout/fragment_child_profile.xml
@@ -13,21 +13,24 @@
         tools:context=".Fragment_child_profile">
 
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/child_profile_edit_pic"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:padding="10dp"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/blank_profile_pic" />
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            app:srcCompat="@drawable/blank_profile_pic"
+            android:layout_gravity="center"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@color/colorAccent"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/common_google_signin_btn_text_dark_disabled"
             android:padding="10dp"
             android:text="Personal Details"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorPrimary"
             android:textSize="18dp" />
 
         <EditText
@@ -49,10 +52,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/common_google_signin_btn_text_dark_disabled"
             android:padding="10dp"
             android:text="Parent Contact"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorPrimary"
             android:textSize="18dp" />
 
         <EditText
@@ -74,10 +76,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/common_google_signin_btn_text_dark_disabled"
             android:padding="10dp"
             android:text="Health Details"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorPrimary"
             android:textSize="18dp" />
 
         <EditText
@@ -105,19 +106,23 @@
 
         <Button
             android:id="@+id/btn_child_profile_save"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:text="Save Profile"
             android:textAllCaps="false"
-            android:theme="@style/Widget.AppCompat.Button"
+            android:textColor="#ffffff"
+            android:background="@drawable/ic_btnfilledblue"
+            android:layout_marginBottom="10dp"
             android:textSize="18sp" />
 
         <Button
             android:id="@+id/btn_child_profile_delete"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
             android:text="Delete Child Profile"
-            android:backgroundTint="@color/colorAccent"
+            android:background="@drawable/ic_btnborderedblue"
+            android:layout_gravity="center"
             android:theme="@style/Widget.AppCompat.Button"
             android:textAllCaps="false"
             android:textSize="18sp" />
