Update Child feed

--- a/app/src/main/res/layout/fragment_child_feed.xml
+++ b/app/src/main/res/layout/fragment_child_feed.xml
@@ -23,7 +23,7 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:background="@color/colorAccent"
+                android:background="#1FAB89"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7">
 
@@ -48,7 +48,7 @@
                 android:id="@+id/toolbar_child_feed"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="#1E56A0"
+                android:background="#1FAB89"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
             </androidx.appcompat.widget.Toolbar>
