--- a/app/src/main/res/layout/activity_forgot_pass.xml
+++ b/app/src/main/res/layout/activity_forgot_pass.xml
@@ -43,7 +43,7 @@
         android:layout_width="150dp"
         android:layout_height="30dp"
         android:background="@drawable/ic_btnfilled"
-        android:text="Submit"
+        android:text="Reset Password"
         android:textAllCaps="false"
         android:textColor="#ffffff"
         android:textSize="15dp"
