--- a/app/src/main/res/layout/fragment_activities_child_list.xml
+++ b/app/src/main/res/layout/fragment_activities_child_list.xml
@@ -2,9 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
     android:clickable="true"
     android:orientation="vertical"
+    android:background="?android:windowBackground"
     tools:context=".Fragment_activities_child_list">
 
     <LinearLayout
