--- a/app/src/main/res/layout/fragment_activities_child_list.xml
+++ b/app/src/main/res/layout/fragment_activities_child_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:orientation="vertical"
-    android:background="?android:windowBackground"
+    android:background="#ffffff"
     tools:context=".Fragment_activities_child_list">
 
     <LinearLayout
