--- a/app/src/main/res/layout/fragment_child_feed.xml
+++ b/app/src/main/res/layout/fragment_child_feed.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:windowBackground"
+    android:background="#ffffff"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment_child_feed">
 
@@ -23,14 +23,14 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:background="#1FAB89"
+                android:background="#511845"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/expandedImage"
                     xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_gravity="center"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
@@ -39,7 +39,7 @@
                     app:layout_collapseMode="parallax"
                     android:transitionName="ProPicShared"
                     app:layout_collapseParallaxMultiplier="0.7"
-                    app:civ_border_color="@color/colorAccent"/>
+                    app:civ_border_color="@color/white"/>
 
 
             </FrameLayout>
@@ -48,7 +48,7 @@
                 android:id="@+id/toolbar_child_feed"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="#1FAB89"
+                android:background="#511845"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
             </androidx.appcompat.widget.Toolbar>
